--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
     display: flex;
@@ -16,12 +16,12 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
-  }
+  } */
   
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    margin-left: 20px;
+    
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
@@ -34,16 +34,7 @@
     font-size: 1.8rem;
   }
   
-  .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 60vw;
-    justify-content: end;
-    margin-right: 2rem;
-  }
+  
   
   .nav-item {
     height: 80px;
