--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,13 +2,16 @@
   width: 300px;
 }
 .footer-container {
-    background-color: #242424;
-    /* padding: 4rem 0 2rem 0; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-top: 5px solid #f6c783;
+  background-color: #242424;
+  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top: 5px solid #f6c783;
+  position: fixed;
+  bottom: 0;
+  z-index: 26;
+  width: 100%;
   }
   
   .footer-subscription {
