--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,64 @@
 .row {
   display: flex;
 }
-
+.header-intro-name{
+  font-family: 'Yellowtail', cursive;
+  color: #ffd189;
+}
+.hero-graphico {
+  width: 374px;
+  padding: 25px;
+  position: relative;
+  margin: 0 auto;
+}
+.hero-graphico::before {
+  content: '';
+  width: 50%;
+  background-color: #ffd189;
+  height: 10px;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hero-graphico-bottom {
+  position: relative;
+}
+.hero-graphico-bottom::before {
+  content: '';
+  position: absolute;
+  right: -9px;
+  bottom: -20px;
+  width: 50%;
+  height: 10px;
+  background-color: #f5c883;
+  z-index: 10;
+}
+.description-intro {
+  font-family: roboto;
+}
+.dg-pf-banner-start-button a {
+  font-family: roboto;
+}
+.hero-graphico-bottom::after {
+  content: '';
+  position: absolute;
+  right: -19px;
+  bottom: -20px;
+  width: 10px;
+  height: 50%;
+  background-color: #f5c883;
+}
+.hero-graphico::after {
+  content: '';
+  position: absolute;
+  height: 50%;
+  background-color: #f5c883;
+  width: 10px;
+  margin: 0 !important;
+  left: 0;
+  top: 0;
+}
 /* Create two equal columns that sits next to each other */
 .column-one {
   flex: 25%;
@@ -12,6 +69,9 @@
   flex: 75%;
   padding: 10px;
 
+}
+.description-descript {
+  font-family: 'Roboto', sans-serif;
 }
 video {
     object-fit: cover;
@@ -24,27 +84,20 @@ video {
     max-width: 1200px;
     margin: 0 auto;
 }  */
-.hero-image img {
-  max-width: 450px;
-}
+
 .hero-graphico {
   position: relative;
 }
 .hero-graphico::after {
-  content: '';
-  background: url('') center center/cover no-repeat;
-  height: 424px;
-  width: 450px;
-  z-index: 0;
-  display: inline-flex;
-  position: absolute;
-  left: 10px;
-  right: 0;
-  margin: 0 auto;
-  z-index: 0;
-  top: 7px;
+  
 
 } 
+.hero-image img {
+  z-index: 11;
+  position: relative;
+  background-color: #000;
+  max-width: 100%;
+}
 .hero-description p, .hero-description h1 {
   margin: 0;
 }
@@ -64,14 +117,17 @@ video {
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
     padding-top: 100px;
-   
+    padding-bottom: 100px;
+    display: inline-block;
+  }
+  .column-inner {
+    float: left;
+    width: 47%;
   }
   .hero-description {
     padding-top: 33px;
 }
-  .hero-wrapper {
-    display: flex;
-  }
+  
   .hero-description > h1 {
     color: #f6c783 !important;
     font-size: 84px;
@@ -117,7 +173,7 @@ position: relative;
   @media screen and (max-width: 960px) {
     .hero-container,
     .hero-wrapper {
-        display: block !important;
+        
         padding-left: 25px;
 padding-right: 25px;
       }
@@ -168,10 +224,11 @@ padding-right: 25px;
 
 }
 .fadeIn{
-    opacity:1;
-    width:100px;
-    height:100px;
-    transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+  opacity: 1;
+  
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+  
+  
 
 }
 .dg-pf-banner-start-button {
