--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -6,7 +6,7 @@
   color: #ffd189;
 }
 .hero-graphico {
-  width: 374px;
+  
   padding: 25px;
   position: relative;
   margin: 0 auto;
@@ -18,7 +18,7 @@
   height: 10px;
   display: block;
   position: absolute;
-  top: 0;
+  top: -25px;;
   left: 0;
 }
 .hero-graphico-bottom {
@@ -27,7 +27,7 @@
 .hero-graphico-bottom::before {
   content: '';
   position: absolute;
-  right: -9px;
+  right: -40px;
   bottom: -20px;
   width: 50%;
   height: 10px;
@@ -57,7 +57,7 @@
   width: 10px;
   margin: 0 !important;
   left: 0;
-  top: 0;
+  top: -45px;
 }
 /* Create two equal columns that sits next to each other */
 .column-one {
@@ -100,6 +100,10 @@ video {
 }
 .hero-description p, .hero-description h1 {
   margin: 0;
+  text-align: left;
+}
+.hero-btns {
+  text-align: left;
 }
 .hero-description {
   padding-right: 25px;
@@ -116,9 +120,9 @@ video {
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    display: inline-block;
+    padding-left: 2em;
+    padding-right: 2em;
+    display: grid;
   }
   .column-inner {
     float: left;
@@ -126,8 +130,11 @@ video {
   }
   .hero-description {
     padding-top: 33px;
+    align-self: center;
 }
-  
+.hero-wrapper {
+  display: flex;
+}
   .hero-description > h1 {
     color: #f6c783 !important;
     font-size: 84px;
