--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -73,16 +73,16 @@ z-index: 27;
         width: 100% !important;
       }
     
-    .nav-links {
-      color: #fff;
-     
-      align-items: center;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-      height: 100%;
-      display: block;
-      border-bottom: 2px solid #393939;
-    }
+      .nav-links {
+        color: #fff;
+        align-items: center;
+        text-decoration: none;
+        padding: 0.5rem 1rem;
+        height: 100%;
+        display: block;
+        border-bottom: 2px solid #393939;
+        font-family: 'Roboto', sans-serif;
+      }
     
     .nav-links:hover {
         border-bottom: 1px solid #fff;
