--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,11 @@ body {
   margin: 0;
   padding: 0;
   background-color: #171515;
+  font-family: 'Roboto', sans-serif;
 }
-
+h2 {
+  padding-bottom: 0 !important;
+}
 @import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .App-logo {
@@ -23,6 +26,9 @@ body {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.skillbar-title span {
+  font-size: 10px;
 }
 .hero-graphico-bottom img {
   border-radius: 50%;
