--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -11,6 +11,33 @@
   position: relative;
   margin: 0 auto;
 }
+.custom-color-banner-codehide,
+.h-heading-main {
+  font-size: 18px;
+  color: #817e7e73;
+  font-family: cursive;
+  text-shadow: 1px 1px 1px #000;
+  font-style: italic;
+  text-transform: lowercase;
+
+}
+h1.description-intro {
+  font-size: clamp(1rem, -0.6rem + 5vw, 8rem);
+  text-shadow: 1px 1px 1px #000, 2px 2px 0px white;
+  color: white;
+}
+.hero-container {
+  padding-top: 13vh;
+  padding-bottom: 13vh;
+}
+.hero-description {
+  padding-left: 0 !important;
+}
+.hero-wrapper {
+  display: flex;
+  width: 100%;
+  max-width: 1100px;
+}
 .hero-graphico::before {
   content: '';
   width: 50%;
@@ -72,6 +99,7 @@
 }
 .description-descript {
   font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
 }
 video {
     object-fit: cover;
@@ -124,13 +152,16 @@ video {
     padding-right: 2em;
     display: grid;
   }
-  .column-inner {
-    float: left;
-    width: 47%;
-  }
+   .body-adjust{
+    padding-left: 15px;
+   }
   .hero-description {
     padding-top: 33px;
     align-self: center;
+    width: 60%;
+}
+.hero-image{
+  width: 40%;
 }
 .hero-wrapper {
   display: flex;
@@ -256,7 +287,7 @@ padding-right: 25px;
 width: 160  px;
 padding: 10px;
 border: 2px solid #fff;
-border-radius: 10px;
+ 
 text-decoration: none;
 color: #fff;
 font-weight: 600;
