--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,7 +12,11 @@ width: 25%;
 height: 100%;
 z-index: 27;
 } 
-
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background: #111111;
+}
 .page-content {
     width: 100%;
     float: left;
