--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -1,5 +1,5 @@
 .skills-main-section-container{
-  background-color: #1a1515;
+  background-color: #000000;
   padding-left: 2em;
   padding-right: 2em;
 }
@@ -36,7 +36,7 @@
     color: #000 !important;
 }
 .skills-main-section-wrapper{
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
     padding-top: 25px;
     padding-bottom: 25px;
